Add noto_cjk to fonts.conf

--- a/nototools/fonts.conf
+++ b/nototools/fonts.conf
@@ -2,5 +2,6 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
 	<dir>../fonts</dir>
+	<dir>../third_party/noto_cjk</dir>
 	<cachedir prefix="xdg">fontconfig</cachedir>
 </fontconfig>
