update website tools for new locations of fonts in split repo

--- a/nototools/fonts.conf
+++ b/nototools/fonts.conf
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<dir>../fonts</dir>
-	<dir>../third_party/noto_cjk</dir>
+	<dir>../../noto-fonts</dir>
+	<dir>../../noto-cjk</dir>
 	<cachedir prefix="xdg">fontconfig</cachedir>
 </fontconfig>
