fix fonts.conf for color emoji
- includes default conf.d files so they will be applied
- force match of Noto Color Emoji to make it scalable so we don't need
  fixed fontconfig
- tidy whitespace

--- a/nototools/fonts.conf
+++ b/nototools/fonts.conf
@@ -1,8 +1,18 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-	<dir>../../noto-fonts</dir>
-	<dir>../../noto-cjk</dir>
-        <dir>../../noto-emoji</dir>
-	<cachedir prefix="xdg">fontconfig</cachedir>
+  <dir>../../noto-fonts</dir>
+  <dir>../../noto-cjk</dir>
+  <dir>../../noto-emoji</dir>
+
+  <include>/etc/fonts/conf.d</include>
+
+  <match target="scan">
+    <test name="family">
+       <string>Noto Color Emoji</string>
+    </test>
+    <edit name="scalable" mode="assign"><bool>true</bool></edit>
+  </match>
+
+  <cachedir prefix="xdg">fontconfig</cachedir>
 </fontconfig>
