Make fonts.conf search under emoji/fonts, not emoji.

--- a/nototools/fonts.conf
+++ b/nototools/fonts.conf
@@ -3,7 +3,7 @@
 <fontconfig>
   <dir>../../noto-fonts</dir>
   <dir>../../noto-cjk</dir>
-  <dir>../../noto-emoji</dir>
+  <dir>../../noto-emoji/fonts</dir>
 
   <include>/etc/fonts/conf.d</include>
 
