Fix use of fonts.conf
fonts.conf uses relative paths to access the noto-fonts, noto-cjk, and
noto-emoji repos (this is a bit broken, as there's nothing to enforce
their relative locations w.r.t. the nototools repo).  Unfortunately,
fontconfig resolves relative paths w.r.t the current directory, not the
directory containing fonts.conf.  This means callers of create_image.py
see different font directories based on what the current directory is,
which is bad, especially since these failures are silent by default.

This particular problem is worked around by setting xdg as the prefix
in the fonts.conf directories, and by setting the XDG_XXX_HOME environment
variables in create_image.

In addition to this change, fonts.conf was modified to specify only the
hinted and unhinted subdirectories of noto-fonts, in order to avoid
picking up multiple phase 3 fonts that are still under development.

--- a/nototools/fonts.conf
+++ b/nototools/fonts.conf
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <dir>../../noto-fonts</dir>
-  <dir>../../noto-cjk</dir>
-  <dir>../../noto-emoji/fonts</dir>
+  <dir prefix="xdg">../../noto-fonts/hinted</dir>
+  <dir prefix="xdg">../../noto-fonts/unhinted</dir>
+  <dir prefix="xdg">../../noto-cjk</dir>
+  <dir prefix="xdg">../../noto-emoji/fonts</dir>
 
   <include>/etc/fonts/conf.d</include>
 
