--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ branches:
 
 install:
   - python setup.py install
+  # for ttxn
+  - wget http://download.macromedia.com/pub/developer/opentype/FDK.2.5.65322/FDK-25-LINUX.b65322.zip
+  - unzip FDK-25-LINUX.b65322.zip
+  - cd FDK-25-LINUX.b65322
+  - ./FinishInstallLinux
 
 script:
-  - for f in nototools/*_test.py; do python "$f"; done
+  - cd nototools && ./run_tests
