--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - python setup.py install
   # for ttxn
   - wget http://download.macromedia.com/pub/developer/opentype/FDK.2.5.65322/FDK-25-LINUX.b65322.zip
-  - unzip FDK-25-LINUX.b65322.zip
+  - unzip -q FDK-25-LINUX.b65322.zip
   - cd FDK-25-LINUX.b65322
   - ./FinishInstallLinux
   - cd ..
