--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 install:
   - python setup.py install
   # for ttxn
-  - sudo apt-get install ia32-libs-multiarch
+  - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
   - wget http://download.macromedia.com/pub/developer/opentype/FDK.2.5.65322/FDK-25-LINUX.b65322.zip
   - unzip -q FDK-25-LINUX.b65322.zip
   - PATH="${PATH}:$(pwd)/FDK-25-LINUX.b65322/Tools/linux"
