--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ install:
   - PATH="${PATH}:$(pwd)/FDK-25-LINUX.b65322/Tools/linux"
 
 script:
-  - cd nototools && ./run_tests
+  - cd tests && ./run_tests
