Pickup newer versions of the dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-booleanOperations==0.6.2
-defcon==0.2.0
-fonttools==3.2.1
-Pillow==3.4.2
-pyclipper==1.0.5
-ufoLib==2.0.0
+booleanOperations>=0.6.2
+defcon>=0.2.0
+fonttools>=3.2.1
+Pillow>=3.4.2
+pyclipper>=1.0.5
+ufoLib>=2.0.0
