Change name of base image for devnoto and toolnoto.
This way the base image name aligns with the directory name we keep its
dockerfile in.

--- a/nototools/docker/devnoto/Dockerfile
+++ b/nototools/docker/devnoto/Dockerfile
@@ -2,7 +2,7 @@
 # Using this requires that you map the four core noto repos on the host
 # to /app/noto/nototools... etc.
 
-FROM notobase:latest
+FROM toolbase:latest
 COPY *.sh /tmp/
 RUN /tmp/notodevsetup.sh
 ENTRYPOINT ["/bin/bash"]
