--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
 sudo: required
 language: python
+dist: xenial
 python:
   - "2.7"
+  - "3.7"
 branches:
   only:
     - master
 
 install:
-  - python setup.py install
+  - python --version
+  - python -m pip install --upgrade pip setuptools
+  - python -m pip install -e .
   # for ttxn
   - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
   - wget https://github.com/adobe-type-tools/afdko/releases/download/2.5.65322/FDK-25-LINUX.b65322.zip
