--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - pip install -e .
 - sudo apt-get install libc6:i386 libncurses5:i386 libstdc++6:i386
 script:
-- cd tests && ./run_tests
+- (cd tests && ./run_tests)
 deploy:
   provider: pypi
   user: __token__
