--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ regex==2020.5.14
 scour==0.37
 six==1.15.0
 toml==0.10.1
-typed-ast==1.4.1
+typed-ast>=1.4.2
 ufonormalizer==0.4.1
 ufoProcessor==1.9.0
 unicodedata2==13.0.0.post2
