--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ fs==2.4.15
 lxml==4.8.0
 MutatorMath==3.0.1
 pathspec>=0.9.0
-Pillow==9.0.0
-psautohint==2.3.1
+Pillow==9.0.1
+psautohint>=2.4.0
 pyclipper==1.3.0.post2
 pytz==2022.1
 regex==2022.3.15
